src/ludivine/assets/client.css
/* ... */
#root {
    display: flex;
    flex: 1;
    flex-direction: column;
    background: inherit;
}
main {
    display: flex;
    position: relative;
    width: 100%;
    flex: 1;
    flex-direction: column;
}
main.dialog {
    max-width: 800px;
    margin-top: 100px;
    justify-content: start;
}

@media screen and (max-width: 960px) {
    main.dialog { margin-top: 0; }
}

.tab {
    display: flex;
    flex-direction: column;
    gap: 1em;
}

/* Fullscreen */
main.fullscreen {
    max-width: none;
    margin: 0;
    padding: 0;

    & > .tabbar { display: none; }
    & .tab {
        box-sizing: border-box;
        height: calc(100vh - 2em);
    }
    & .tab > .summary { display: none; }
}

.popup {
    position: fixed;
    padding: 0.5em;
    background: white;
    border-radius: 8px;
    box-shadow: 2px 2px rgba(136, 136, 136, 0.12);
    z-index: 999999;
}

button.confirm { --button_color: #2d8261; }
button.secondary {
    --button_color: #ddd;
    color: black !important;
}
button.secondary.active { color: white !important; }
button.danger {
    --button_color: #d33410 !important;
    --color: white;
    color: var(--color);
}
button.insist {
    --button_color: #d33410 !important;
    --color: white;
    color: var(--color) !important;
    transition: --color 0.2s ease, background 0.2s ease, border-color 0.2s ease;
}
button.danger.insist { --button_color: #951a0b !important; }
button.small { font-size: 0.7em; }
button.small > img {
    width: 12px;
    height: 12px;
}
button:is(.secondary, .small) { font-weight: normal !important; }
button.secondary:not(.active) > img { filter: invert(100%); }

button.highlight { animation: highlight 1s ease-in-out infinite alternate; }
@keyframes highlight {
    0% {
        filter: contrast(100%);
        transform: scale(1);
    }
    100% {
        filter: contrast(110%);
        transform: scale(1.1);
    }
}

#log {
    position: fixed;
    left: 50%;
    top: 1em;
    width: calc(100vw - 2em);
    max-width: 600px;
    z-index: 99999;
    user-select: none;
    -webkit-user-select: none;
    font-size: 15px;
    transform: translateX(-50%);
}

#log > div {
    margin-bottom: 8px;
    padding: 8px;
    background: #373737;
    color: white;
    border-radius: 20px;
    text-align: center;
    cursor: pointer;
}
@media (hover: hover) {
    #log > div:hover { filter: opacity(40%); }
}
#log > div.error { background: #ff6600; }
#log > div.success { background: #2d8261; }

/* Came from https://loading.io/css/ */
.log_spin {
    float: left;
    display: inline-block;
    box-sizing: border-box;
    width: 20px;
    height: 20px;
    margin: -1px 0 0 -1px;
}
.log_spin::after {
    content: ' ';
    display: block;
    width: 12px;
    height: 12px;
    margin: 1px;
    border-radius: 50%;
    border: 4px solid white;
    border-color: white transparent white transparent;
    animation: log_spin 0.8s ease-in-out infinite;
}
@keyframes log_spin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
}

.bar {
    --fill: #383838;
    --empty: white;
    --rounding: 1px;

    width: 100%;
    height: 8px;
    display: flex;
    align-items: center;
    gap: 6px;

    & div {
        flex: 1;
        height: 100%;
        background: linear-gradient(to right, var(--fill) 0 calc(1% * var(--progress)),
                                              var(--empty) calc(1% * var(--progress)));
        border-radius: var(--rounding);
    }

    & span {
        font-size: 0.8em;
        text-align: left;
    }
}
.circle {
    --fill: #383838;
    --empty: color-mix(in srgb, var(--fill), white 80%);

    & circle:nth-child(1) { stroke: var(--empty); }
    & circle:nth-child(2) { stroke: var(--fill); }
}

.row {
    display: flex;
    gap: 1em;
    align-items: start;
}
.column {
    display: flex;
    flex-direction: column;
    gap: 1em;
}
.box {
    display: flex;
    flex-direction: column;
    padding: 1em;
    gap: 1em;
    background: var(--box_color);
    border-radius: 16px;
}

.help {
    display: flex;
    width: 80%;
    max-width: 600px;
    gap: 1em;
    align-items: start;
}
.help > img {
    width: 200px;
    aspect-ratio: auto;
    z-index: 1;
    transform: translateX(-100px);
}
.help > div {
    min-height: 100px;
    margin: 75px 0 0 -250px;
    padding: 1em 1em 1em 150px;
    background: white;
    border-radius: 16px;
}
.help.right > div {
    margin: 75px -250px 0 0;
    padding: 1em 150px 1em 1em;
}
.help.right > img {
    transform: translateX(100px);
}
.box > .help { margin: 1em auto; }

.header {
    font-size: 1.2em;
    font-weight: bold;
    text-transform: uppercase;
    text-align: center;
    color: var(--top_color);
}

@media screen and (max-width: 960px) {
    .row {
        flex-direction: column;
        align-items: stretch;
    }
}

.profile { padding: 2em; }
.profile > .avatar {
    width: 192px;
    height: 192px;
    margin: 0 auto;
    border-width: 6px;
}

@media screen and (max-width: 960px) {
    .profile { width: auto; }
}

.studies {
    display: flex;
    flex: 1;
    flex-direction: column;
    gap: 1em;
}
.study {
    --color: var(--empty_color);

    display: flex;
    box-sizing: border-box;
    background: color-mix(in srgb, var(--color), transparent 60%);
    border-radius: 16px;
    padding: 0.5em 1em;
    gap: 2em;
    align-items: center;
}
.study.draft {
    --color: var(--draft_color);
    --button_color: var(--draft_color);
}
.study.done {
    --color: var(--done_color);
    --button_color: var(--done_color);
}
.study {
    & > img { width: 100px; }
    & > .progress {
        flex: 1;
        text-align: center;
    }

    & .circle {
        --fill: var(--color);
        flex: 1;
    }
}

.event {
    display: flex;
    background: #f6d4c3;
    border-radius: 12px;
    padding: 0.5em;
    gap: 0.8em;
    align-items: center;
}
.event > .text {
    width: 200px;
    padding-left: 0.5em;
    line-height: 1.4;
}
/* ... */

